BUG - Fix bottom bug on mobile

--- a/styles/components/_watermark.scss
+++ b/styles/components/_watermark.scss
@@ -3,6 +3,7 @@
   position: fixed;
   bottom: 24px;
   left: 24px;
+  z-index: 0;
 
   @include media-breakpoint-up(lg) {
     bottom: 30px;
